--- a/Power Notifier/res/layout/add_contact_dialog.xml
+++ b/Power Notifier/res/layout/add_contact_dialog.xml
@@ -5,13 +5,13 @@
     android:orientation="vertical" >
     
     <EditText
-        android:id="@+id/email_address"
-        android:inputType="textEmailAddress"
+        android:id="@+id/contact_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="4dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-        android:layout_marginBottom="4dp"
-        android:hint="@string/email_address" />
+        android:layout_marginTop="16dp"
+        android:hint="" />
+
 </LinearLayout>
